--- a/WebContent/app/views/administracion.html
+++ b/WebContent/app/views/administracion.html
@@ -13,11 +13,11 @@
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body">
-				<form role="form">
+
+				<form role="form" name="formAction">
 					<div class="form-group">
-						<label for="admin-nombre" class="control-label">Nombre</label> <input
-							type="text" class="form-control" id="admin-nombre"
-							ng-model="nuevoTipo.nombre">
+						<label for="admin-nombre" class="control-label">Nombre</label>
+						<input type="text" class="form-control" id="admin-nombre" name="admin-nombre" ng-model="nuevoTipo.nombre">
 					</div>
 					<div>
 						<div class="alert alert-success alert-dismissible" role="alert" ng-show="success && success!=null && msgSuccess!=null" >
@@ -50,12 +50,10 @@
 			<div class="tipos" ng-init="listar()">
 				<table class="table table-hover table-bordered table-condensed">
 					<tbody>
-						<tr ng-repeat="tipo in tiposAdmin">
+						<tr ng-repeat="tipo in tiposAdmin | orderBy: 'nombre'">
 							<td>{{tipo.nombre}}</td>
-							<td><a href="#/administracion" ng-click="editar(tipo)"><span
-									class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a href="#/administracion" ng-click="borrar($index)"><span
-									class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+							<td><a href="#/administracion" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+							<td><a href="#/administracion" ng-click="borrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
 					</tbody>
 				</table>
