--- a/WebContent/app/views/home.html
+++ b/WebContent/app/views/home.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="page-header"></div>
 	<div class="jumbotron">
-		<h1>Gestion Docente</h1>
+		<h1 class="text-center">Gestion Docente</h1>
 	</div>
 </div>
