- Ctrls, Services, route, service, controllers, REST services, FUNCINANDO para todos los Tipos. - Alert pasado a modal

--- a/WebContent/app/views/formGenerico.html
+++ b/WebContent/app/views/formGenerico.html
@@ -3,6 +3,24 @@
 	<div class="page-header">
 		<h2>{{modulo}}</h2>
 	</div>
+	<!-- Alert Modal -->
+	<div class="modal fade" id="message-modal" tabindex="-1" role="dialog" aria-labelledby="message-modal" aria-hidden="true">
+	  <div class="modal-dialog modal-sm">
+	    <div class="modal-content">
+	    	<div class="modal-header">
+	    		<h4 class="modal-title">Informacion</h4>
+	    	</div>
+	    	<div class="modal-body">
+				<div class="alert alert-success alert-dismissible" role="alert" ng-show="success && success!=null && msgSuccess!=null" >
+				  <h4 class="text-center">{{msgSuccess}}</h4>
+				</div>
+				<div class="alert alert-danger alert-dismissible" role="alert" ng-show="!success && success!=null && msgError!=null">
+				  <h4 class="text-center">{{msgError}}</h4>
+				</div>
+	    	</div>
+	    </div>
+	  </div>
+	</div>
 	<!-- Form Nuevo -->
 	<div class="row col-sm-5">
 		<!-- Panel -->
@@ -18,16 +36,6 @@
 						<label for="nombre" class="control-label">Nombre</label>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nuevo.nombre">
 					</div>
-					<div>
-						<div class="alert alert-success alert-dismissible" role="alert" ng-show="success && success!=null && msgSuccess!=null" >
-						  <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-						  {{msgSuccess}}
-						</div>
-						<div class="alert alert-danger alert-dismissible" role="alert" ng-show="!success && success!=null && msgError!=null">
-						  <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-						  {{msgError}}
-						</div>
-					</div>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
@@ -37,7 +45,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-3 col-sm-offset-3">
+	<div class="row col-sm-4 col-sm-offset-3">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
