--- a/WebContent/app/views/formGenerico.html
+++ b/WebContent/app/views/formGenerico.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-4 col-sm-offset-3">
+	<div class="row col-sm-4 col-sm-offset-2">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -53,16 +53,22 @@
 				<h4>Tipos Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="tipos" ng-init="listar()">
-				<table class="table table-hover table-bordered table-condensed">
-					<tbody>
-						<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
-							<td>{{tipo.nombre}}</td>
-							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a href="#/{{urlModulo}}" ng-click="borrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-						</tr>
-					</tbody>
-				</table>
+			<div class="panel-body">
+				<div class="tipos" ng-init="listar()">
+					<table class="table table-hover table-bordered table-condensed table-striped">
+						<tbody>
+							<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
+								<td>{{tipo.nombre}}</td>
+								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+								<td><a href="#/{{urlModulo}}" ng-click="borrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<!-- Panel Footer -->
+			<div class="panel-footer">
+				<h5>Total de items: <strong>{{tipos.length}}</strong>.</h5>
 			</div>
 		</div>
 	</div>
