--- a/WebContent/app/views/partidos.html
+++ b/WebContent/app/views/partidos.html
@@ -27,11 +27,15 @@
 		<div class="panel panel-default">
 			<!-- Panel Header -->
 			<div class="panel-heading">
-				<h4>Nueva {{nombreForm}}</h4>
+				<h4>Nuevo {{nombreForm}}</h4>
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body">
-				<form role="form" name="formAction">
+				<form role="form" name="formAction" ng-init="listarProvincias()">
+					<div class="form-group">
+						<label for="provincia" class="control-label">Provincia</label>
+						<select class="form-control" ng-options="provincia.nombre for provincia in provincias" required ng-model="provinciaSel"></select>
+					</div>
 					<div class="form-group">
 						<label for="nombre" class="control-label">Nombre</label>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nuevo.nombre">
@@ -45,7 +49,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-4 col-sm-offset-2">
+	<div class="row col-sm-6 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -53,22 +57,29 @@
 				<h4>{{modulo}} Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="panel-body">
-				<div class="provincias" ng-init="listar()">
-					<table class="table table-hover table-bordered table-condensed table-striped">
-						<tbody>
-							<tr ng-repeat="provincia in provincias | orderBy: 'nombre'">
-								<td>{{provincia.nombre}}</td>
-								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(provincia)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-								<td><a href="#/{{urlModulo}}" ng-click="borrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
+			<div class="tipos" ng-init="listar()">
+				<table class="table table-hover table-bordered table-condensed table-striped">
+					<thead>
+						<tr>
+							<td><em>Provincia</em></td>
+							<td><em>Partido</em></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="partido in partidos | orderBy:['provincia.nombre', 'nombre']">
+							<td>{{partido.provincia.nombre}}</td>
+							<td>{{partido.nombre}}</td>
+							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(partido)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+							<td><a href="#/{{urlModulo}}" ng-click="borrar(partido)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5>Total de provincias: <strong>{{provincias.length}}</strong>.</h5>
+				<h5>Total de partidos: <strong>{{partidos.length}}</strong>.</h5>
 			</div>
 		</div>
 	</div>
