- funcion limpiar() para cada formulario de cada vista - boton guardar:primary, boton limpiar:default - se excluye del mapeo gson, para la clase partido, la propiedad localidades

--- a/WebContent/app/views/formGenerico.html
+++ b/WebContent/app/views/formGenerico.html
@@ -41,6 +41,7 @@
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer">
 				<button type="submit" class="btn btn-primary" ng-click="guardar(nuevo)">Guardar</button>
+				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
 			</div>
 		</div>
 	</div>
