--- a/WebContent/app/views/provincias.html
+++ b/WebContent/app/views/provincias.html
@@ -41,6 +41,7 @@
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer">
 				<button type="submit" class="btn btn-primary" ng-click="guardar(nuevo)">Guardar</button>
+				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
 			</div>
 		</div>
 	</div>
