--- a/WebContent/app/views/carreras.html
+++ b/WebContent/app/views/carreras.html
@@ -1,3 +1,4 @@
+
 <div class="row">
 	<!-- Page Header -->
 	<div class="page-header">
@@ -31,14 +32,14 @@
 	    	<div class="modal-body">
 	    		<form role="form" name="confirmBorrar">
 	    			<div class="form-group">
-	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{partido.nombre}}</strong>?</h4>
+	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{carrera.nombre}}</strong>?</h4>
 	    			</div>
 	    		</form>
 	    	</div>
 	    	<div class="modal-footer">
     			<div class="form-group">
 					<button type="submit" class="btn btn-default pull-left" ng-click="cancelarBorrar()">Cancelar</button>
-    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(partido)">Borrar</button>
+    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(carrera)">Borrar</button>
     			</div>
 	    	</div>
 	    </div>
@@ -50,24 +51,24 @@
 		<div class="panel panel-default">
 			<!-- Panel Header -->
 			<div class="panel-heading">
-				<h4>Nuevo {{nombreForm}}</h4>
+				<h4>Nueva {{nombreForm}}</h4>
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body">
-				<form role="form" name="formAction" ng-init="listarProvincias()">
+				<form role="form" name="formAction" ng-init="listarSedes()">
 					<div class="form-group">
-						<label for="provincia" class="control-label">Provincia</label>
-						<select class="form-control" ng-options="provincia.nombre for provincia in provincias" required ng-model="provinciaSel"></select>
+						<label for="sede" class="control-label">Sede, Localidad, Partido, Provincia</label>
+						<select class="form-control" ng-options="( sede.nombre + ' ' + sede.localidad.nombre + ' , ' + sede.localidad.partido.nombre + ' , ' + sede.localidad.partido.provincia.nombre ) for sede in sedes" required ng-model="sedeSel"></select>
 					</div>
 					<div class="form-group">
 						<label for="nombre" class="control-label">Nombre</label>
-						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nuevo.nombre">
+						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre">
 					</div>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer">
-				<button type="submit" class="btn btn-primary" ng-click="guardar(nuevo)">Guardar</button>
+				<button type="submit" class="btn btn-primary" ng-click="guardar(nueva)">Guardar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
 			</div>
 		</div>
@@ -85,25 +86,25 @@
 				<table class="table table-hover table-bordered table-condensed table-striped">
 					<thead>
 						<tr>
-							<td><em>Partido</em></td>
-							<td><em>Provincia</em></td>
+							<td><em>Carrera</em></td>
+							<td><em>Sede, Localidad, Partido, Provincia</em></td>
 							<td></td>
 							<td></td>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="partido in partidos | orderBy:['provincia.nombre', 'nombre']">
-							<td><strong>{{partido.nombre}}</strong></td>
-							<td>{{partido.provincia.nombre}}</td>
-							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(partido)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(partido)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+						<tr ng-repeat="carrera in carreras | orderBy:['sede.nombre', 'nombre']">
+							<td><strong>{{carrera.nombre}}</strong></td>
+							<td><strong>{{carrera.sede.nombre}} {{carrera.sede.localidad.nombre}}</strong>, {{carrera.sede.localidad.partido.nombre}}, {{carrera.sede.localidad.partido.provincia.nombre}}</td>
+							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(carrera)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(carrera)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5>Total de partidos: <strong>{{partidos.length}}</strong>.</h5>
+				<h5>Total de carreras: <strong>{{carreras.length}}</strong>.</h5>
 			</div>
 		</div>
 	</div>
