--- a/WebContent/app/views/formGenerico.html
+++ b/WebContent/app/views/formGenerico.html
@@ -21,6 +21,29 @@
 	    </div>
 	  </div>
 	</div>
+	<!-- Confirmacion Borrar -->
+	<div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="confirm-modal" aria-hidden="true">
+	  <div class="modal-dialog modal-sm">
+	    <div class="modal-content">
+	    	<div class="modal-header alert alert-danger" role="alert">
+	    		<h4 class="modal-title"><strong>Atencion!</strong></h4>
+	    	</div>
+	    	<div class="modal-body">
+	    		<form role="form" name="confirmBorrar">
+	    			<div class="form-group">
+	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{tipo.nombre}}</strong>?</h4>
+	    			</div>
+	    		</form>
+	    	</div>
+	    	<div class="modal-footer">
+    			<div class="form-group">
+					<button type="submit" class="btn btn-default pull-left" ng-click="cancelarBorrar()">Cancelar</button>
+    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(tipo)">Borrar</button>
+    			</div>
+	    	</div>
+	    </div>
+	  </div>
+	</div>
 	<!-- Form Nuevo -->
 	<div class="row col-sm-5">
 		<!-- Panel -->
@@ -46,7 +69,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-4 col-sm-offset-2">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -59,9 +82,9 @@
 					<table class="table table-hover table-bordered table-condensed table-striped">
 						<tbody>
 							<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
-								<td>{{tipo.nombre}}</td>
+								<td><strong>{{tipo.nombre}}</strong></td>
 								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-								<td><a href="#/{{urlModulo}}" ng-click="borrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+								<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 							</tr>
 						</tbody>
 					</table>
