--- a/WebContent/app/views/localidades.html
+++ b/WebContent/app/views/localidades.html
@@ -21,6 +21,29 @@
 	    </div>
 	  </div>
 	</div>
+	<!-- Confirmacion Borrar -->
+	<div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="confirm-modal" aria-hidden="true">
+	  <div class="modal-dialog modal-sm">
+	    <div class="modal-content">
+	    	<div class="modal-header alert alert-danger" role="alert">
+	    		<h4 class="modal-title"><strong>Atencion!</strong></h4>
+	    	</div>
+	    	<div class="modal-body">
+	    		<form role="form" name="confirmBorrar">
+	    			<div class="form-group">
+	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{localidad.nombre}}</strong>?</h4>
+	    			</div>
+	    		</form>
+	    	</div>
+	    	<div class="modal-footer">
+    			<div class="form-group">
+					<button type="submit" class="btn btn-default pull-left" ng-click="cancelarBorrar()">Cancelar</button>
+    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(localidad)">Borrar</button>
+    			</div>
+	    	</div>
+	    </div>
+	  </div>
+	</div>
 	<!-- Form Nuevo -->
 	<div class="row col-sm-4">
 		<!-- Panel -->
@@ -66,8 +89,8 @@
 				<table class="table table-hover table-bordered table-condensed table-striped">
 					<thead>
 						<tr>
-							<td><em>Partido</em></td>
 							<td><em>Localidad</em></td>
+							<td><em>Partido</em></td>
 							<td><em>CP</em></td>
 							<td></td>
 							<td></td>
@@ -75,11 +98,11 @@
 					</thead>
 					<tbody>
 						<tr ng-repeat="localidad in localidades | orderBy:['partido.nombre', 'nombre']">
+							<td><strong>{{localidad.nombre}}</strong></td>
 							<td>{{localidad.partido.nombre}}</td>
-							<td>{{localidad.nombre}}</td>
 							<td>{{localidad.cp}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(localidad)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a href="#/{{urlModulo}}" ng-click="borrar(localidad)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(localidad)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
 					</tbody>
 				</table>
