- cambio formGenerico por formTipos, ya que solo aplica a tipos - instituto FUNCIONANDO - se agrego al modulo de sedes el instituto al que referencia

--- a/WebContent/app/views/localidades.html
+++ b/WebContent/app/views/localidades.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<!-- Page Header -->
-	<div class="page-header">
+	<div class="page-header col-sm-offset-1">
 		<h2>{{modulo}}</h2>
 	</div>
 	<!-- Alert Modal -->
@@ -45,7 +45,7 @@
 	  </div>
 	</div>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-4">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -77,7 +77,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-6 col-sm-offset-1">
+	<div class="row col-sm-5 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
