--- a/WebContent/app/views/formTipos.html
+++ b/WebContent/app/views/formTipos.html
@@ -31,21 +31,21 @@
 	    	<div class="modal-body">
 	    		<form role="form" name="confirmBorrar">
 	    			<div class="form-group">
-	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{partido.nombre}}</strong>?</h4>
+	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{tipo.nombre}}</strong>?</h4>
 	    			</div>
 	    		</form>
 	    	</div>
 	    	<div class="modal-footer">
     			<div class="form-group">
 					<button type="submit" class="btn btn-default pull-left" ng-click="cancelarBorrar()">Cancelar</button>
-    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(partido)">Borrar</button>
+    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(tipo)">Borrar</button>
     			</div>
 	    	</div>
 	    </div>
 	  </div>
 	</div>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-3 col-sm-offset-1">
+	<div class="row col-sm-5 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -54,11 +54,7 @@
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body">
-				<form role="form" name="formAction" ng-init="listarProvincias()">
-					<div class="form-group">
-						<label for="provincia" class="control-label">Provincia</label>
-						<select class="form-control" ng-options="provincia.nombre for provincia in provincias" required ng-model="provinciaSel"></select>
-					</div>
+				<form role="form" name="formAction">
 					<div class="form-group">
 						<label for="nombre" class="control-label">Nombre</label>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nuevo.nombre">
@@ -73,37 +69,30 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-5 col-sm-offset-1">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
 			<div class="panel-heading">
-				<h4>{{modulo}} Actuales</h4>
+				<h4>Tipos Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="tipos" ng-init="listar()">
-				<table class="table table-hover table-bordered table-condensed table-striped">
-					<thead>
-						<tr>
-							<td><em>Partido</em></td>
-							<td><em>Provincia</em></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="partido in partidos | orderBy:['provincia.nombre', 'nombre']">
-							<td><strong>{{partido.nombre}}</strong></td>
-							<td>{{partido.provincia.nombre}}</td>
-							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(partido)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(partido)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-						</tr>
-					</tbody>
-				</table>
+			<div class="panel-body">
+				<div class="tipos" ng-init="listar()">
+					<table class="table table-hover table-bordered table-condensed table-striped">
+						<tbody>
+							<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
+								<td><strong>{{tipo.nombre}}</strong></td>
+								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+								<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5>Total de partidos: <strong>{{partidos.length}}</strong>.</h5>
+				<h5>Total de items: <strong>{{tipos.length}}</strong>.</h5>
 			</div>
 		</div>
 	</div>
