--- a/WebContent/app/views/institutos.html
+++ b/WebContent/app/views/institutos.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<!-- Page Header -->
-	<div class="page-header">
+	<div class="page-header col-sm-offset-1">
 		<h2>{{modulo}}</h2>
 	</div>
 	<!-- Alert Modal -->
@@ -31,26 +31,26 @@
 	    	<div class="modal-body">
 	    		<form role="form" name="confirmBorrar">
 	    			<div class="form-group">
-	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{tipo.nombre}}</strong>?</h4>
+	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{instituto.nombre}}</strong>?</h4>
 	    			</div>
 	    		</form>
 	    	</div>
 	    	<div class="modal-footer">
     			<div class="form-group">
 					<button type="submit" class="btn btn-default pull-left" ng-click="cancelarBorrar()">Cancelar</button>
-    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(tipo)">Borrar</button>
+    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(instituto)">Borrar</button>
     			</div>
 	    	</div>
 	    </div>
 	  </div>
 	</div>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-5">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
 			<div class="panel-heading">
-				<h4>Nuevo {{nombreForm}}</h4>
+				<h4>Nueva {{nombreForm}}</h4>
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body">
@@ -69,22 +69,22 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-4 col-sm-offset-1">
+	<div class="row col-sm-4 col-sm-offset-2">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
 			<div class="panel-heading">
-				<h4>Tipos Actuales</h4>
+				<h4>{{modulo}} Actuales</h4>
 			</div>
 			<!-- Listado -->
 			<div class="panel-body">
-				<div class="tipos" ng-init="listar()">
+				<div class="institutos" ng-init="listar()">
 					<table class="table table-hover table-bordered table-condensed table-striped">
 						<tbody>
-							<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
-								<td><strong>{{tipo.nombre}}</strong></td>
-								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-								<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+							<tr ng-repeat="instituto in institutos | orderBy: 'nombre'">
+								<td><strong>{{instituto.nombre}}</strong></td>
+								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(instituto)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+								<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(instituto)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -92,7 +92,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5>Total de items: <strong>{{tipos.length}}</strong>.</h5>
+				<h5>Total de institutos: <strong>{{institutos.length}}</strong>.</h5>
 			</div>
 		</div>
 	</div>
