--- a/WebContent/app/views/layout/home.html
+++ b/WebContent/app/views/layout/home.html
@@ -1,4 +1,4 @@
-<div class="row col-sm-10">
+<div class="row col-sm-10 col-sm-offset-1">
 	<div class="jumbotron">
 		<h1 class="text-center">Gestion Docente</h1>
 	</div>
