--- a/WebContent/app/views/provincias.html
+++ b/WebContent/app/views/provincias.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<!-- Page Header -->
-	<div class="page-header">
+	<div class="page-header col-sm-offset-1">
 		<h2>{{modulo}}</h2>
 	</div>
 	<!-- Alert Modal -->
@@ -45,7 +45,7 @@
 	  </div>
 	</div>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-4">
+	<div class="row col-sm-3 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -69,7 +69,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-4 col-sm-offset-2">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
