- se agrega al modal de info el boton cerrar

--- a/WebContent/app/views/sedes.html
+++ b/WebContent/app/views/sedes.html
@@ -19,6 +19,9 @@
 				  <h4 class="text-center">{{msgError}}</h4>
 				</div>
 	    	</div>
+   	 		<div class="modal-footer">
+	    		<button type="button" class="btn btn-default center-block" data-dismiss="modal">Cerrar</button>
+	    	</div>
 	    </div>
 	  </div>
 	</div>
