--- a/WebContent/app/views/asignaturas.html
+++ b/WebContent/app/views/asignaturas.html
@@ -18,7 +18,7 @@
 				  <h4 class="text-center">{{msgError}}</h4>
 				</div>
 	    	</div>
-	    	<div class="modal-footer">
+ 		    <div class="modal-footer">
 	    		<button type="button" class="btn btn-default center-block" data-dismiss="modal">Cerrar</button>
 	    	</div>
 	    </div>
@@ -34,21 +34,21 @@
 	    	<div class="modal-body">
 	    		<form role="form" name="confirmBorrar">
 	    			<div class="form-group">
-	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{tipo.nombre}}</strong>?</h4>
+	    				<h4 class="text-center">¿Desea borrar <strong>{{nombreForm}} {{asignatura.nombre}}</strong>?</h4>
 	    			</div>
 	    		</form>
 	    	</div>
 	    	<div class="modal-footer">
     			<div class="form-group">
 					<button type="submit" class="btn btn-default pull-left" ng-click="cancelarBorrar()">Cancelar</button>
-    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(tipo)">Borrar</button>
+    				<button type="submit" class="btn btn-danger pull-right" ng-click="borrar(asignatura)">Borrar</button>
     			</div>
 	    	</div>
 	    </div>
 	  </div>
 	</div>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-5 col-sm-offset-1">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -57,45 +57,62 @@
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body">
-				<form role="form" name="formAction">
+				<form role="form" name="formAction" ng-init="listarCarreras()">
 					<div class="form-group">
-						<label for="nombre" class="control-label">Nombre</label>
-						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nuevo.nombre">
+						<label for="carrera" class="control-label">Carrera, Instituto, Sede, Localidad, Partido</label>
+						<select class="form-control" ng-options="(carrera.nombre + ', ' + carrera.sede.instituto.nombre + ', ' + carrera.sede.nombre + ', ' + carrera.sede.localidad.nombre + ', ' + carrera.sede.localidad.partido.nombre ) for carrera in carreras" required ng-model="carreraSel"></select>
+					</div>
+					<div class="form-group">
+						<label for="nombre" class="control-label">Asignatura</label>
+						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre">
+					</div>
+					<div class="form-group">
+						<label for="anio" class="control-label">Año</label>
+						<input type="text" class="form-control" id="anio" name="anio" ng-model="nueva.anio">
 					</div>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer">
-				<button type="submit" class="btn btn-primary" ng-click="guardar(nuevo)">Guardar</button>
+				<button type="submit" class="btn btn-primary" ng-click="guardar(nueva)">Guardar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
 			</div>
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-4 col-sm-offset-1">
+	<div class="row col-sm-5 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
 			<div class="panel-heading">
-				<h4>Tipos Actuales</h4>
+				<h4>{{modulo}} Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="panel-body">
-				<div class="tipos" ng-init="listar()">
-					<table class="table table-hover table-bordered table-condensed table-striped">
-						<tbody>
-							<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
-								<td><strong>{{tipo.nombre}}</strong></td>
-								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-								<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
+			<div class="tipos" ng-init="listar()">
+				<table class="table table-hover table-bordered table-condensed table-striped">
+					<thead>
+						<tr>
+							<td><em>Asignatura</em></td>
+							<td><em>Carrera</em></td>
+							<td><em>Año</em></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="asignatura in asignaturas | orderBy:['carrera.nombre', 'nombre']">
+							<td><strong>{{asignatura.nombre}}</strong></td>
+							<td>{{asignatura.carrera.nombre}}</td>
+							<td>{{asignatura.anio}}</td>
+							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(asignatura)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(asignatura)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5>Total de items: <strong>{{tipos.length}}</strong>.</h5>
+				<h5>Total de asignaturas: <strong>{{asignaturas.length}}</strong>.</h5>
 			</div>
 		</div>
 	</div>
