--- a/WebContent/app/views/partidos.html
+++ b/WebContent/app/views/partidos.html
@@ -18,6 +18,9 @@
 				  <h4 class="text-center">{{msgError}}</h4>
 				</div>
 	    	</div>
+	    	<div class="modal-footer">
+	    		<button type="button" class="btn btn-default center-block" data-dismiss="modal">Cerrar</button>
+	    	</div>
 	    </div>
 	  </div>
 	</div>
