--- a/WebContent/app/views/carreras.html
+++ b/WebContent/app/views/carreras.html
@@ -19,6 +19,9 @@
 				  <h4 class="text-center">{{msgError}}</h4>
 				</div>
 	    	</div>
+ 		    <div class="modal-footer">
+	    		<button type="button" class="btn btn-default center-block" data-dismiss="modal">Cerrar</button>
+	    	</div>
 	    </div>
 	  </div>
 	</div>
@@ -64,6 +67,15 @@
 						<label for="nombre" class="control-label">Nombre</label>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre">
 					</div>
+					<div class="form-group">
+						<label for="cantAnios" class="control-label">Duracion</label>
+						<br>
+						<div class="btn-group" data-toggle="buttons" id="radioAnios">
+						 	<label ng-repeat="anio in anios" ng-class="{'btn btn-default active' : nueva.cantAnios==anio.value, 'btn btn-default !active' : nueva.cantAnios!=anio.value}">
+						    	<input type="radio" id="anioSel" name="anioSel" value="{{anio.value}}" ng-model="$parent.anioSel">{{anio.value}} {{(anio.value==1)?'año':'años'}}
+							</label>
+						</div>
+					</div>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
@@ -88,6 +100,7 @@
 						<tr>
 							<td><em>Carrera</em></td>
 							<td><em>Sede, Instituto, Localidad, Partido, Provincia</em></td>
+							<td>Años</td>
 							<td></td>
 							<td></td>
 						</tr>
@@ -96,6 +109,7 @@
 						<tr ng-repeat="carrera in carreras | orderBy:['sede.nombre', 'nombre']">
 							<td><strong>{{carrera.nombre}}</strong></td>
 							<td><strong>{{carrera.sede.nombre}}, {{carrera.sede.instituto.nombre}}, {{carrera.sede.localidad.nombre}}</strong>, {{carrera.sede.localidad.partido.nombre}}, {{carrera.sede.localidad.partido.provincia.nombre}}</td>
+							<td>{{carrera.cantAnios}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(carrera)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(carrera)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
