--- a/WebContent/app/views/asignaturas.html
+++ b/WebContent/app/views/asignaturas.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<!-- Page Header -->
-	<div class="page-header col-sm-offset-1">
+	<div class="page-header">
 		<h2>{{modulo}}</h2>
 	</div>
 	<!-- Alert Modal -->
@@ -48,7 +48,7 @@
 	  </div>
 	</div>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-5 col-sm-offset-1">
+	<div class="row col-sm-5 ">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -60,7 +60,7 @@
 				<form role="form" name="formAction" ng-init="listarCarreras()">
 					<div class="form-group">
 						<label for="carrera" class="control-label">Carrera, Instituto, Sede, Localidad, Partido</label>
-						<select class="form-control" ng-options="(carrera.nombre + ', ' + carrera.sede.instituto.nombre + ', ' + carrera.sede.nombre + ', ' + carrera.sede.localidad.nombre + ', ' + carrera.sede.localidad.partido.nombre ) for carrera in carreras" required ng-model="carreraSel" ng-click="initAnios()"></select>
+						<select class="form-control" ng-options="(carrera.nombre + ', ' + carrera.sede.instituto.nombre + ', ' + carrera.sede.nombre + ', ' + carrera.sede.localidad.nombre + ', ' + carrera.sede.localidad.partido.nombre ) for carrera in carreras" required ng-model="carreraSel" ng-click="initAnios(carreraSel.cantAnios)"></select>
 					</div>
 					<div class="form-group">
 						<label for="nombre" class="control-label">Asignatura</label>
@@ -85,7 +85,7 @@
 		</div>
 	</div>
 	<!-- Listado Actuales -->
-	<div class="row col-sm-5 col-sm-offset-1">
+	<div class="row col-sm-6 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -97,18 +97,18 @@
 				<table class="table table-hover table-bordered table-condensed table-striped">
 					<thead>
 						<tr>
+							<td><em>Año</em></td>
 							<td><em>Asignatura</em></td>
 							<td><em>Carrera</em></td>
-							<td><em>Año</em></td>
 							<td></td>
 							<td></td>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="asignatura in asignaturas | orderBy:['carrera.nombre', 'nombre']">
+							<td>{{asignatura.anio}} año </td>
 							<td><strong>{{asignatura.nombre}}</strong></td>
-							<td>{{asignatura.carrera.nombre}}</td>
-							<td>{{asignatura.anio}}</td>
+							<td>{{asignatura.carrera.nombre + ', ' + asignatura.carrera.sede.instituto.nombre + ', ' + asignatura.carrera.sede.nombre + ', ' + asignatura.carrera.sede.localidad.nombre + ', ' + asignatura.carrera.sede.localidad.partido.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(asignatura)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(asignatura)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
