--- a/WebContent/app/views/asignaturas.html
+++ b/WebContent/app/views/asignaturas.html
@@ -58,17 +58,16 @@
 			<!-- Panel Body -->
 			<div class="panel-body">
 				<form role="form" name="formAction" ng-init="listarCarreras()">
-					<div class="form-group">
-						<label for="carrera" class="control-label">Carrera, Instituto, Sede, Localidad, Partido</label>
-						<select class="form-control" ng-options="(carrera.nombre + ', ' + carrera.sede.instituto.nombre + ', ' + carrera.sede.nombre + ', ' + carrera.sede.localidad.nombre + ', ' + carrera.sede.localidad.partido.nombre ) for carrera in carreras" required ng-model="carreraSel" ng-click="initAnios(carreraSel.cantAnios)"></select>
+					<div class="form-group" ng-class="{'has-error':carreraSel==null, 'has-success':carreraSel!=null}">
+						<select class="form-control" ng-options="(carrera.nombre + ', ' + carrera.sede.instituto.nombre + ', ' + carrera.sede.nombre + ', ' + carrera.sede.localidad.nombre + ', ' + carrera.sede.localidad.partido.nombre ) for carrera in carreras" required ng-model="carreraSel" ng-click="initAnios(carreraSel.cantAnios)">
+							<option value="">-- Carrera, Instituto, Sede, Localidad, Partido --</option>
+						</select>
 					</div>
-					<div class="form-group">
-						<label for="nombre" class="control-label">Asignatura</label>
+					<div class="form-group" ng-class="{'has-error':(nueva.nombre==undefined || nueva.nombre.lenght==0), 'has-success':(nueva.nombre!=undefined && nueva.nombre.lenght!=0)}">
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre" placeholder="Nombre de la Asignatura">
 					</div>
 					<div class="form-group" ng-show="(carreraSel.cantAnios!=undefined && carreraSel.cantAnios>0)">
 						<label for="anio" class="control-label">Año en que se cursa</label>
-						<br>
 						<div>
 							<label class="radio-inline" ng-repeat="anio in anios"> 
 								<input type="radio" id="anioSel" name="anioSel" value="{{anio}}" ng-model="$parent.anioSel"> {{anio}} año 
@@ -94,7 +93,7 @@
 			</div>
 			<!-- Listado -->
 			<div class="tipos" ng-init="listar()">
-				<table class="table table-hover table-bordered table-condensed table-striped">
+				<table class="table table-hover table-bordered table-condensed table-striped" ng-show="asignaturas.length!=0">
 					<thead>
 						<tr>
 							<td><em>Año</em></td>
@@ -106,7 +105,7 @@
 					</thead>
 					<tbody>
 						<tr ng-repeat="asignatura in asignaturas | orderBy:['carrera.nombre', 'nombre']">
-							<td>{{asignatura.anio}} año </td>
+							<td><strong>{{asignatura.anio}} °</strong></td>
 							<td><strong>{{asignatura.nombre}}</strong></td>
 							<td>{{asignatura.carrera.nombre + ', ' + asignatura.carrera.sede.instituto.nombre + ', ' + asignatura.carrera.sede.nombre + ', ' + asignatura.carrera.sede.localidad.nombre + ', ' + asignatura.carrera.sede.localidad.partido.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(asignatura)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
