- Colapsar formulario al clickear en editar elemento - Seteo elemento a borrar en obj para el modal-confirm - Ajustes en la vista de los docentes

--- a/WebContent/app/views/layout/modal-alert.html
+++ b/WebContent/app/views/layout/modal-alert.html
@@ -6,18 +6,15 @@
 				<h4 class="modal-title">Informacion</h4>
 			</div>
 			<div class="modal-body">
-				<div class="alert alert-success alert-dismissible" role="alert"
-					ng-show="success && success!=null && msgSuccess!=null">
+				<div class="alert alert-success alert-dismissible" role="alert" ng-show="success && success!=null && msgSuccess!=null">
 					<h4 class="text-center">{{msgSuccess}}</h4>
 				</div>
-				<div class="alert alert-danger alert-dismissible" role="alert"
-					ng-show="!success && success!=null && msgError!=null">
+				<div class="alert alert-danger alert-dismissible" role="alert" ng-show="!success && success!=null && msgError!=null">
 					<h4 class="text-center">{{msgError}}</h4>
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-default center-block"
-					data-dismiss="modal">Cerrar</button>
+				<button type="button" class="btn btn-default center-block" data-dismiss="modal">Cerrar</button>
 			</div>
 		</div>
 	</div>
