--- a/WebContent/app/views/layout/modal-confirm.html
+++ b/WebContent/app/views/layout/modal-confirm.html
@@ -10,9 +10,8 @@
 			<div class="modal-body">
 				<form role="form" name="confirmBorrar">
 					<div class="form-group">
-						<h4 class="text-center">
-							¿Desea borrar <strong>{{nombreForm}} {{obj.nombre}}</strong>?
-<!-- 							¿Desea borrar <strong>{{nombreForm}} {{persona.nombre}}</strong>? -->
+						<h4 class="text-center text-capitalize">
+							¿Desea borrar {{nombreForm}} <strong>{{obj.nombre}}</strong>?
 						</h4>
 					</div>
 				</form>
