--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -7,7 +7,7 @@
 	<modal-confirm></modal-confirm>
 	
 	<!-- Form Nuevo -->
-	<div class="row col-sm-8 col-offset-1">
+	<div class="row col-sm-9 col-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-default">
 			<!-- Panel Header -->
@@ -110,7 +110,7 @@
 											<td class="text-center"><span ng-class="{'glyphicon glyphicon-check':domicilio.actual}"></span></td>
 											<td class="text-capitalize"><strong>{{domicilio.domicilio}}</strong></td>
 											<td><strong>{{domicilio.localidad.nombre}}</strong></td>
-											<td><a href="#/{{urlModulo}}" ng-click="editarDomicilio(domicilio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+<!-- 											<td><a href="#/{{urlModulo}}" ng-click="editarDomicilio(domicilio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td> -->
 											<td><a href="#/{{urlModulo}}" ng-click="removeDomicilio(domicilio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 										</tr>
 										<tr>
