- sysVersion en $rootScope - para todos los controllers: $scope.textoConfirm para el modal-confirm - se descomento la referencia a Contacto en Persona.java - panel para formacion academica en formulario de docentes

--- a/WebContent/app/views/layout/modal-alert.html
+++ b/WebContent/app/views/layout/modal-alert.html
@@ -7,10 +7,10 @@
 			</div>
 			<div class="modal-body">
 				<div class="alert alert-success alert-dismissible" role="alert" ng-show="success && success!=null && msgSuccess!=null">
-					<h4 class="text-center">{{msgSuccess}}</h4>
+					<h4 class="text-center text-capitalize">{{msgSuccess}}</h4>
 				</div>
 				<div class="alert alert-danger alert-dismissible" role="alert" ng-show="!success && success!=null && msgError!=null">
-					<h4 class="text-center">{{msgError}}</h4>
+					<h4 class="text-center text-capitalize">{{msgError}}</h4>
 				</div>
 			</div>
 			<div class="modal-footer">
