--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -110,7 +110,7 @@
 											<td class="text-center"><span ng-class="{'glyphicon glyphicon-check':domicilio.actual}"></span></td>
 											<td class="text-capitalize"><strong>{{domicilio.domicilio}}</strong></td>
 											<td><strong>{{domicilio.localidad.nombre}}</strong></td>
-<!-- 											<td><a href="#/{{urlModulo}}" ng-click="editarDomicilio(domicilio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td> -->
+											<td><a href="#/{{urlModulo}}" ng-click="editarDomicilio(domicilio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 											<td><a href="#/{{urlModulo}}" ng-click="removeDomicilio(domicilio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 										</tr>
 										<tr>
@@ -131,7 +131,7 @@
 											</td>
 											<td>
 												<div class="text-center btn btn-md">
-													<a href="#/{{urlModulo}}" ng-click="addDomicilio(nuevoDomicilio)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+													<a href="#/{{urlModulo}}" ng-click="addDomicilio()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
 												</div>
 											</td>
 										</tr>
@@ -158,8 +158,8 @@
 									</thead>
 									<tbody>
 										<tr ng-repeat="medio in nuevosMediosContacto | orderBy:['medio']" >
-											<td><strong>{{medio.medio.nombre}}</strong></td>
-											<td><strong>{{medio.contacto}}</strong></td>
+											<td><strong>{{medio.tipoContacto.nombre}}</strong></td>
+											<td><strong>{{medio.valor}}</strong></td>
 											<td><a href="#/{{urlModulo}}" ng-click="editarMedioDeContacto(medio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 											<td><a href="#/{{urlModulo}}" ng-click="removeMedio(medio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 										</tr>
@@ -171,12 +171,79 @@
 											</td>
 											<td>
 												<div class="form-group">
-													<input class="form-control" type="text" placeholder="Contacto" ng-model="nuevoMedio.contacto">
+													<input class="form-control" type="text" placeholder="Contacto" ng-model="nuevoMedio.valor">
 												</div>
 											</td>
 											<td>
 												<div class="text-center btn btn-md">
-													<a href="#/{{urlModulo}}" ng-click="addMedio(nuevoMedio)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+													<a href="#/{{urlModulo}}" ng-click="addMedio()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+												</div>	
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+					<!-- Formacion Academica -->
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h5 class="panel-title">Formacion Academica</h5>
+						</div>
+						<div class="panel-body">
+							<div class="formacionAcademica">
+								<table class="table table-hover table-condensed table-striped">
+									<thead>
+										<tr>
+											<td>Tipo</td>
+											<td>Titulo</td>
+											<td>Expedido por</td>
+											<td>Año expedido</td>
+											<td></td>
+											<td></td>
+										</tr>
+									</thead>
+									<tbody>
+										<tr ng-repeat="formacion in nuevasFormacionesAcademicas | orderBy:['anio']" >
+											<td><strong>{{formacion.tipoFormacion.nombre}}</strong></td>
+											<td class="text-capitalize"><strong>{{formacion.titulo}}</strong></td>
+											<td class="text-capitalize"><strong>{{formacion.expedidoPor}}</strong></td>
+											<td><strong>{{formacion.anio | date:'yyyy'}}</strong></td>
+											<td><a href="#/{{urlModulo}}" ng-click="editarFormacionAcademica(formacion)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+											<td><a href="#/{{urlModulo}}" ng-click="removeFormacion(formacion)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+										</tr>
+										<tr>
+											<td>
+												<select class="form-control" ng-options="tipo.nombre for tipo in tiposFormacion" required ng-model="tipoFormacionSel" ng-init="listarTiposFormacion()">
+													<option value="">-- Tipo de Formacion --</option>
+												</select>
+											</td>
+											<td>
+												<div class="form-group">
+													<input class="form-control text-capitalize" type="text" placeholder="Titulo" ng-model="nuevaFormacion.titulo">
+												</div>
+											</td>
+											<td>
+												<div class="form-group">
+													<input class="form-control text-capitalize" type="text" placeholder="Expedido por" ng-model="nuevaFormacion.expedidoPor">
+												</div>
+											</td>
+											<td>
+												<div class="form-group form-inline col-sm-7">
+										            <p class="input-group">
+										              <input type="text" class="form-control" datepicker-popup="{{formatYearOnly}}" ng-model="nuevaFormacion.anio" is-open="openedAnio" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
+										              <span class="input-group-btn">
+										                <button type="button" class="btn btn-default" ng-click="openAnio($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+										              </span>
+										            </p>
+												</div>
+<!-- 												<div class="form-group"> -->
+<!-- 													<input class="form-control" type="date" placeholder="Año" ng-model="nuevaFormacion.anio"> -->
+<!-- 												</div> -->
+											</td>
+											<td>
+												<div class="text-center btn btn-md">
+													<a href="#/{{urlModulo}}" ng-click="addFormacion()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
 												</div>	
 											</td>
 										</tr>
