--- a/WebContent/app/views/layout/modal-confirm.html
+++ b/WebContent/app/views/layout/modal-confirm.html
@@ -11,7 +11,7 @@
 				<form role="form" name="confirmBorrar">
 					<div class="form-group">
 						<h4 class="text-center text-capitalize">
-							¿Desea borrar {{nombreForm}} <strong>{{obj.nombre}}</strong>?
+							¿Desea borrar {{nombreForm}} <strong>{{textoConfirm}}</strong>?
 						</h4>
 					</div>
 				</form>
