--- a/WebContent/app/views/layout/page-footer.html
+++ b/WebContent/app/views/layout/page-footer.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
 		<p class="navbar-text navbar-left">
-			<small><strong>Version 1.0</strong></small>
+			<small><strong>Version {{sysVersion}}</strong></small>
 		</p>
 		<p class="navbar-text navbar-right">
 			<small>Desarrollado por <strong>Fabricio Scianda</strong> - <a
