--- a/WebContent/app/views/layout/menu.html
+++ b/WebContent/app/views/layout/menu.html
@@ -1,6 +1,7 @@
 <div class="row">
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
+			<!-- Titulo -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed"
 					data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -10,6 +11,7 @@
 				</button>
 				<a class="navbar-brand" href="#">Formación</a>
 			</div>
+			<!-- Menu -->
 			<div class="collapse navbar-collapse"
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
@@ -66,6 +68,7 @@
 									Revista</a></li>
 						</ul></li>
 				</ul>
+				<!-- Bienvenido / Logout -->
 				<ul class="nav navbar-nav navbar-right">
 					<li><p class="navbar-text">
 							Bienvenido <strong>Fabricio Scianda</strong>!
