--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -7,9 +7,9 @@
 	<modal-confirm></modal-confirm>
 	
 	<!-- Form Nuevo -->
-	<div class="row col-sm-9 col-offset-1">
+	<div class="row col-sm-10">
 		<!-- Panel -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">
@@ -22,242 +22,24 @@
 			<div class="panel-body" collapse="colapsarFormulario">
 				<form role="form" name="formAction">
 					<!-- Informacion Personal -->
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h5 class="panel-title">Información Personal</h5>
-						</div>
-						<div class="panel-body">
-							<div class="row">
-								<div class="col-sm-6">
-									<div class="form-group">
-										<input type="text" class="form-control text-capitalize" id="nombre" name="nombre" ng-model="nombre" placeholder="Nombre">
-									</div>
-								</div>
-								<div class="col-sm-6">
-									<div class="form-group">
-										<input type="text" class="form-control text-capitalize" id="apellido" name="apellido" ng-model="apellido" placeholder="Apellido">
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-sm-6">
-									<div class="form-group form-inline">
-										<div class="form-group" ng-init="listarTiposDoc()">
-											<label class="radio-inline" ng-repeat="tipoDoc in tiposDoc"> 
-												<input type="radio" id="tipoDocSel" name="tipoDocSel" value="{{tipoDoc.id}}" ng-blur="rellenarDNICuil()" ng-model="$parent.tipoDocSel"> {{tipoDoc.nombre}}
-											</label>
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" id="numeroDoc" name="numeroDoc" ng-model="numeroDoc" maxlength="8" placeholder="Número" ng-blur="rellenarDNICuil()">
-										</div>
-									</div>
-								</div>
-								<div class="col-sm-6">
-									<div class="form-group form-inline">
-										<div class="form-group">
-											<label for="fechaNac" class="control-label pull-left">Fecha de Nacimiento</label>
-										</div>
-										<div class="form-group form-inline">
-								            <p class="input-group">
-								              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="fechaNac" is-open="opened" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
-								              <span class="input-group-btn">
-								                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-								              </span>
-								            </p>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-sm-6">
-									<div class="form-group form-inline">
-										<div class="form-group">
-											<label for="cuil" class="control-label pull-left">CUIL</label>
-										</div>
-										<div class="form-group">
-											<div class="input-group">
-												<select class="form-control" ng-options="tipoCuil for tipoCuil in tiposCuil" ng-model="cuilTipoSel" ng-blur="validarCuit(cuilTipoSel, numeroDocCuil)"></select>
-												<span class="input-group-addon" id="basic-addon1">-</span>
-												<input class="form-control text-center" type="text" name="cuil" ng-model="numeroDocCuil" placeholder="DNI" maxlength="8" ng-blur="validarCuit(cuilTipoSel, numeroDocCuil)">
-												<span class="input-group-addon" id="basic-addon1">-</span>
-												<select class="form-control" ng-options="validadorCuil for validadorCuil in validadoresCuil" ng-model="cuilValidadorSel"></select>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+					<docente-info-personal></docente-info-personal>
+					<!-- Informacion Administrativa -->
+					<docente-info-administrativa></docente-info-administrativa>
 					<!-- Domicilios -->
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h5 class="panel-title">Domicilios</h5>
-						</div>
-						<div class="panel-body">
-							<div class="domicilios">
-								<table class="table table-hover table-condensed table-striped">
-									<thead>
-										<tr>
-											<td class="text-center">Actual</td>
-											<td>Domicilio</td>
-											<td>Localidad</td>
-											<td></td>
-											<td></td>
-										</tr>
-									</thead>
-									<tbody>
-										<tr ng-repeat="domicilio in nuevosDomicilios | orderBy:['actual','domicilio']" >
-											<td class="text-center"><span ng-class="{'glyphicon glyphicon-check':domicilio.actual}"></span></td>
-											<td class="text-capitalize"><strong>{{domicilio.domicilio}}</strong></td>
-											<td><strong>{{domicilio.localidad.nombre}}</strong></td>
-											<td><a href="#/{{urlModulo}}" ng-click="editarDomicilio(domicilio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-											<td><a href="#/{{urlModulo}}" ng-click="removeDomicilio(domicilio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-										</tr>
-										<tr>
-											<td>
-												<div class="text-center">
-													<input type="checkbox" ng-model="nuevoDomicilio.actual">
-												</div>
-											</td>
-											<td>
-												<div class="form-group">
-													<input class="form-control text-capitalize" type="text" placeholder="Domicilio" ng-model="nuevoDomicilio.domicilio">
-												</div>
-											</td>
-											<td>
-												<select class="form-control text-capitalize" ng-options="localidad.nombre for localidad in localidades" required ng-model="localidadSel" ng-init="listarLocalidades()">
-													<option value="">-- Localidad --</option>
-												</select>
-											</td>
-											<td>
-												<div class="text-center btn btn-md">
-													<a href="#/{{urlModulo}}" ng-click="addDomicilio()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
-												</div>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
+					<docente-domicilios></docente-domicilios>
 					<!-- Medios de Contacto -->
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h5 class="panel-title">Medios de Contacto</h5>
-						</div>
-						<div class="panel-body">
-							<div class="mediosContacto">
-								<table class="table table-hover table-condensed table-striped">
-									<thead>
-										<tr>
-											<td>Medio</td>
-											<td>Contacto</td>
-											<td></td>
-											<td></td>
-										</tr>
-									</thead>
-									<tbody>
-										<tr ng-repeat="medio in nuevosMediosContacto | orderBy:['medio']" >
-											<td><strong>{{medio.tipoContacto.nombre}}</strong></td>
-											<td><strong>{{medio.valor}}</strong></td>
-											<td><a href="#/{{urlModulo}}" ng-click="editarMedioDeContacto(medio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-											<td><a href="#/{{urlModulo}}" ng-click="removeMedio(medio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-										</tr>
-										<tr>
-											<td>
-												<select class="form-control" ng-options="medio.nombre for medio in mediosContacto" required ng-model="medioSel" ng-init="listarMediosContacto()">
-													<option value="">-- Medio de Contacto --</option>
-												</select>
-											</td>
-											<td>
-												<div class="form-group">
-													<input class="form-control" type="text" placeholder="Contacto" ng-model="nuevoMedio.valor">
-												</div>
-											</td>
-											<td>
-												<div class="text-center btn btn-md">
-													<a href="#/{{urlModulo}}" ng-click="addMedio()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
-												</div>	
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
+					<docente-medios-contacto></docente-medios-contacto>
 					<!-- Formacion Academica -->
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h5 class="panel-title">Formacion Academica</h5>
-						</div>
-						<div class="panel-body">
-							<div class="formacionAcademica">
-								<table class="table table-hover table-condensed table-striped">
-									<thead>
-										<tr>
-											<td>Tipo</td>
-											<td>Titulo</td>
-											<td>Expedido por</td>
-											<td>Año expedido</td>
-											<td></td>
-											<td></td>
-										</tr>
-									</thead>
-									<tbody>
-										<tr ng-repeat="formacion in nuevasFormacionesAcademicas | orderBy:['anio']" >
-											<td><strong>{{formacion.tipoFormacion.nombre}}</strong></td>
-											<td class="text-capitalize"><strong>{{formacion.titulo}}</strong></td>
-											<td class="text-capitalize"><strong>{{formacion.expedidoPor}}</strong></td>
-											<td><strong>{{formacion.anio | date:'yyyy'}}</strong></td>
-											<td><a href="#/{{urlModulo}}" ng-click="editarFormacionAcademica(formacion)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-											<td><a href="#/{{urlModulo}}" ng-click="removeFormacion(formacion)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-										</tr>
-										<tr>
-											<td>
-												<select class="form-control" ng-options="tipo.nombre for tipo in tiposFormacion" required ng-model="tipoFormacionSel" ng-init="listarTiposFormacion()">
-													<option value="">-- Tipo de Formacion --</option>
-												</select>
-											</td>
-											<td>
-												<div class="form-group">
-													<input class="form-control text-capitalize" type="text" placeholder="Titulo" ng-model="nuevaFormacion.titulo">
-												</div>
-											</td>
-											<td>
-												<div class="form-group">
-													<input class="form-control text-capitalize" type="text" placeholder="Expedido por" ng-model="nuevaFormacion.expedidoPor">
-												</div>
-											</td>
-											<td>
-												<div class="form-group form-inline col-sm-7">
-										            <p class="input-group">
-										              <input type="text" class="form-control" datepicker-popup="{{formatYearOnly}}" ng-model="nuevaFormacion.anio" is-open="openedAnio" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
-										              <span class="input-group-btn">
-										                <button type="button" class="btn btn-default" ng-click="openAnio($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-										              </span>
-										            </p>
-												</div>
-<!-- 												<div class="form-group"> -->
-<!-- 													<input class="form-control" type="date" placeholder="Año" ng-model="nuevaFormacion.anio"> -->
-<!-- 												</div> -->
-											</td>
-											<td>
-												<div class="text-center btn btn-md">
-													<a href="#/{{urlModulo}}" ng-click="addFormacion()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
-												</div>	
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
+					<docente-form-academica></docente-form-academica>
+					<!-- Empleos -->
+					<docente-empleos></docente-empleos>
 				</form>
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer" ng-show="!colapsarFormulario">
 				<button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
+				<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
 			</div>
 		</div>
 	</div>
@@ -265,13 +47,13 @@
 	<!-- Listado Actuales -->
 	<div class="row col-sm-11">
 		<!-- Panel -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">{{modulo}} Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="tipos" ng-init="listar()">
+			<div class="panel-body" ng-init="listar()">
 				<table class="table table-hover table-condensed table-striped" ng-show="docentes.length!=0">
 					<thead>
 						<tr>
