--- a/WebContent/app/views/personas.html
+++ b/WebContent/app/views/personas.html
@@ -8,7 +8,7 @@
 	<!-- Form Nuevo -->
 	<div class="row col-sm-11 col-offset-1">
 		<!-- Panel -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">
@@ -76,7 +76,7 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-6">
-							<div class="panel panel-default">
+							<div class="panel panel-primary">
 								<div class="panel-heading">
 									<h5 class="panel-title">Medios de Contacto</h5>
 								</div>
@@ -122,7 +122,7 @@
 							</div>
 						</div>
 						<div class="col-sm-6">
-							<div class="panel panel-default">
+							<div class="panel panel-primary">
 								<div class="panel-heading">
 									<h5 class="panel-title">Domicilios</h5>
 								</div>
@@ -181,19 +181,20 @@
 			<div class="panel-footer" ng-show="!colapsarFormulario">
 				<button type="submit" class="btn btn-primary" ng-click="guardar(nueva)">Guardar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
+				<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
 			</div>
 		</div>
 	</div>
 	<!-- Listado Actuales -->
 	<div class="row col-sm-11">
 		<!-- Panel -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">{{modulo}} Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="tipos" ng-init="listar()">
+			<div class="panel-body" ng-init="listar()">
 				<table class="table table-hover table-condensed table-striped" ng-show="personas.length!=0">
 					<thead>
 						<tr>
