--- a/WebContent/app/views/provincias.html
+++ b/WebContent/app/views/provincias.html
@@ -8,7 +8,7 @@
 	<!-- Form Nuevo -->
 	<div class="row col-sm-3 col-sm-offset-1">
 		<!-- Panel -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">
@@ -29,30 +29,29 @@
 			<div class="panel-footer" ng-show="!colapsarFormulario">
 				<button type="submit" class="btn btn-primary" ng-click="guardar(nuevo)">Guardar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
+				<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
 			</div>
 		</div>
 	</div>
 	<!-- Listado Actuales -->
 	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">{{modulo}} Actuales</h4>
 			</div>
 			<!-- Listado -->
-			<div class="panel-body">
-				<div class="provincias" ng-init="listar()">
-					<table class="table table-hover table-condensed table-striped" ng-show="provincias.length!=0">
-						<tbody>
-							<tr ng-repeat="provincia in provincias | orderBy: 'nombre'">
-								<td><strong>{{provincia.nombre}}</strong></td>
-								<td><a href="#/{{urlModulo}}" ng-click="editarElemento(provincia)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-								<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(provincia)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
+			<div class="panel-body" ng-init="listar()">
+				<table class="table table-hover table-condensed table-striped" ng-show="provincias.length!=0">
+					<tbody>
+						<tr ng-repeat="provincia in provincias | orderBy: 'nombre'">
+							<td><strong>{{provincia.nombre}}</strong></td>
+							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(provincia)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(provincia)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
